--- a/aws/templates/aws/ec2list.html
+++ b/aws/templates/aws/ec2list.html
@@ -8,6 +8,7 @@
                 <p>ec2 자원 순서 : {{ data.idx }} </p>
                 <a href="/aws/ec2detail/?id={{data.idx}}" ><h4>인스턴스 ID: {{ data.InstanceId }}</h4></a>
                 <p>{{ data.KeyName }}</p>
+                <button >SHELL</button>
             </li>
         </ul>
             <!-- <p>{{ object.content }}</p> -->
