--- a/aws/templates/aws/ec2tb.html
+++ b/aws/templates/aws/ec2tb.html
@@ -2,6 +2,7 @@
 {% block content %}
 <div class="container">
           <h5>ec2 resource table</h5>
+      <div>
         <table  class="table">
             <thead>
                 <!-- 여기에 속성 명 기입 하기 -->
@@ -22,24 +23,35 @@
                 {% for data in data_list %}
               <tr>
                 <th scope="row">{{data.idx}}</th>
-                <td>{{data.InstanceId}}</td>
+                <td><p id="InsId" >{{data.InstanceId}}</p></td>
                 <td>{{data.KeyName}}</td>
                 <td>{{data.AvailabilityZone}}</td>
                 <td>{{data.PrivateIp}}</td>
-                <td>{{data.PbulicIp}}</td>
+                <td><p id="PubIp">{{data.PbulicIp}}</p></td>
                 <td>{{data.PublicDns}}</td>
                 <td>{{data.InstanceType}}</td>
-                <!-- <td>{{data.}}</td> -->
-                <!-- <td>{{data.}}</td> -->
+                <td>{{"data."}}</td>
+                <td><button id="cmd-go">SHELL</button></td>
               </tr>
               {% endfor %}   
             </tbody>
           </table>
+          <script>
+            const hrefVal=window.location;
+            $('#cmd-go').click(function(){
+              let InsID=$('#InsId').text();
+              let PubIP=$('#PubIp').text();
+              let Addr=hrefVal.protocol+"//"+hrefVal.hostname+":"+hrefVal.port+"/aws/instanceCmd/";
+              location.href=Addr+"?Instance_Id="+InsID+"&Public_Ip="+PubIP;
+
+            })
+          </script>
         </div>        
                 <!-- <p>{{ object.content }}</p> -->
             <!-- <button class="delete btn btn-danger" data-id="<%= posts[i]._id %>">삭제</button>
             <button type="button" onclick="location.href='/edit/<%= posts[i]._id %>'" >수정</button>
             <button class="btn btn-secondary chat" data-id="<%= posts[i].user_id %>">채팅</button> -->
+
           
 </div>    
 {% endblock %}
